# mkservice

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs
src/provider/: mod.rs  systemd.rs
