[package]
name = "mkservice"
version = "0.1.0"
edition = "2021"
authors = ["gdvalle"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profiles.release]
panic = "abort"
opt-level = "s"
debug = "0"
lto = "fat"
codegen-units = "1"
# strip = "symbols"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
maplit = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2"
